# cake

./: .gitignore  CMakeLists.txt  default.nix
res/rook/: rook.yaml
src/: AnimatedSprite.cpp  AnimatedSprite.h  GameObject.h  Rook.cpp  Rook.h  main.cpp
